--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -49,6 +49,20 @@ ORDER: Base + typography > general layout + grid > page layout > components
   margin: 0;
   padding: 0;
   box-sizing: inherit; }
+  ::-webkit-scrollbar{
+    width: 1rem;
+}
+::-webkit-scrollbar-track,::-webkit-scrollbar-thumb
+{
+    border-radius: .5rem .5rem ;
+}
+::-webkit-scrollbar-track
+{
+    background-color: #f7f7f7;
+}
+::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(to bottom,#7ed56f,#28b485);
+}
 
 html {
   font-size: 62.5%; }
