--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,7 +5,20 @@
     padding: 0;
     box-sizing: inherit;
 }
-
+::-webkit-scrollbar{
+    width: 1rem;
+}
+::-webkit-scrollbar-track,::-webkit-scrollbar-thumb
+{
+    border-radius: .5rem .5rem ;
+}
+::-webkit-scrollbar-track
+{
+    background-color: $color-gray-light-1;
+}
+::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(to bottom,$primary-color-light,$primary-color-dark);
+}
 html {
     // This defines what 1rem is
     font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
